==> uouo00/Light-Widow-Matte-Box/Matte Box Rev 1/Core/Light_Widow/Gas_Gauge/src/BQ27441.c <==
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include "BQ27441.h"
#include "BQ27441_Definitions.h"
#include "stm32f4xx_hal.h"
#define BAT_CAPACITY 400 				/* Battery Capacity - 400mAh Default	*/

bool enterConfig(bool userControl)
{
	if (userControl) {
		lipo.userConfigControl = true;
	}

	if (sealed()) {
		unseal(); // Must be unsealed before making changes
	}

	if (executeControlWord(BQ27441_CONTROL_SET_CFGUPDATE))
	{
		int16_t timeout = BQ72441_I2C_TIMEOUT;
		while ((timeout--) && (!(flags() & BQ27441_FLAG_CFGUPMODE)))
			HAL_Delay(1);

		if (timeout > 0)
			return true;
	}

	return false;
}

void i2cReadBytes(uint8_t subAddr, uint8_t *dest, uint8_t Size) {
	HAL_I2C_Mem_Read(lipo.i2c, BQ72441_I2C_ADDRESS, subAddr, I2C_MEMADD_SIZE_8BIT, dest, Size, BQ72441_I2C_TIMEOUT);
}

void i2cWriteBytes(uint8_t subAddr, uint8_t *src, uint8_t Size) {
	HAL_I2C_Mem_Write(lipo.i2c, BQ72441_I2C_ADDRESS, subAddr, I2C_MEMADD_SIZE_8BIT, src, Size, BQ72441_I2C_TIMEOUT);
}
